fixes about overflow

--- a/src/App/About/about.css
+++ b/src/App/About/about.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: row;
   width: 95%;
-  height: 80vh;
+  min-height: 80vh;
+  height: 100%;
   margin: 0 auto;
 }
 
@@ -68,6 +69,10 @@
   line-height: 2em;
   text-align: left;
   color: #494646;
+}
+
+.about-description .bio-tools p {
+  margin-bottom: 3%;
 }
 
 .title {
